# oktoberfest

./: .buildinfo  .cookietemple.yml  .darglint  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  =22  API.html  Dockerfile  LICENSE  Makefile  MakefileShared  README.rst  ReadMe.md  _key_contributors.html  authors.html  code_of_conduct.html  codecov.yml  config.html  config.json  constants_dir.py  contributing.html  cookietemple.cfg  create_setup.py  custom_mods.html  example_config.json  genindex.html  index.html  installation.html  installer.sh  internal_format.html  jobs.html  modules.html  news.html  noxfile.py  objects.inv  oktoberfest.data.html  (+17 more)
.github/: release-drafter.yml
.github/workflows/: autolabeler.yml  build_package.yml  ci.yml  docs.yml  integ_tests.yml  labeler.yml  main_master_branch_protection.yml  publish_docs.yml  publish_package.yml  release_drafter.yml  run_cookietemple_lint.yml  run_integration_tests.yml  run_tests.yml  sync_project.yml
_sources/: authors.rst.txt  contributing.rst.txt  custom_mods.rst.txt  index.rst.txt  installation.rst.txt  internal_format.rst.txt  jobs.rst.txt  news.rst.txt  outputs.rst.txt  quickstart.rst.txt  reference.rst.txt  usage.rst.txt
api/data/: oktoberfest.data.Spectra.add_column.html  oktoberfest.data.Spectra.add_intensities.html  oktoberfest.data.Spectra.add_intensities_without_mapping.html  oktoberfest.data.Spectra.add_list_of_predicted_intensities.html  oktoberfest.data.Spectra.add_matrix_from_hdf5.html  oktoberfest.data.Spectra.add_mzs.html  oktoberfest.data.Spectra.convert_to_df.html  oktoberfest.data.Spectra.filter_by_score.html  oktoberfest.data.Spectra.from_hdf5.html  oktoberfest.data.Spectra.get_matrix.html  oktoberfest.data.Spectra.get_meta_data.html  oktoberfest.data.Spectra.html  oktoberfest.data.Spectra.preprocess_for_machine_learning.html  oktoberfest.data.Spectra.remove_decoys.html  oktoberfest.data.Spectra.remove_duplicates.html  oktoberfest.data.Spectra.write_as_hdf5.html
api/pl/: oktoberfest.pl.joint_plot.html  oktoberfest.pl.plot_all.html  oktoberfest.pl.plot_gain_loss.html  oktoberfest.pl.plot_mean_sa_ce.html  oktoberfest.pl.plot_pred_rt_vs_irt.html  oktoberfest.pl.plot_score_distribution.html  oktoberfest.pl.plot_violin_sa_ce.html
api/pp/: oktoberfest.pp.annotate_spectral_library.html  oktoberfest.pp.convert_d_to_hdf.html  oktoberfest.pp.convert_raw_to_mzml.html  oktoberfest.pp.convert_search.html  oktoberfest.pp.convert_spectra.html  oktoberfest.pp.convert_spectra_to_mzml.html  oktoberfest.pp.convert_timstof_metadata.html  oktoberfest.pp.digest.html  oktoberfest.pp.filter_peptides.html  oktoberfest.pp.filter_peptides_for_model.html  oktoberfest.pp.gen_lib.html  oktoberfest.pp.generate_metadata.html  oktoberfest.pp.list_spectra.html  oktoberfest.pp.load_search.html  oktoberfest.pp.load_spectra.html  oktoberfest.pp.merge_spectra_and_peptides.html  oktoberfest.pp.split_search.html  oktoberfest.pp.split_timstof_metadata.html
api/pr/: oktoberfest.pr.DLomix.html  oktoberfest.pr.DLomix.predict.html  oktoberfest.pr.DLomix.predict_xl.html  oktoberfest.pr.Koina.html  oktoberfest.pr.Koina.predict.html  oktoberfest.pr.Koina.predict_xl.html  oktoberfest.pr.Predictor.ce_calibration.html  oktoberfest.pr.Predictor.from_config.html  oktoberfest.pr.Predictor.from_dlomix.html  oktoberfest.pr.Predictor.from_koina.html  oktoberfest.pr.Predictor.html  oktoberfest.pr.Predictor.predict_at_once.html  oktoberfest.pr.Predictor.predict_in_chunks.html  oktoberfest.pr.Predictor.predict_in_chunks_xl.html  oktoberfest.pr.Predictor.predict_intensities.html  oktoberfest.pr.Predictor.predict_rt.html  oktoberfest.pr.ce_calibration.html  oktoberfest.pr.create_dlomix_dataset.html  oktoberfest.pr.grpc_predict.html  oktoberfest.pr.predict.html  (+7 more)
certificates/: Proteomicsdb-Prosit-v2.crt  oktoberfest-production.crt  oktoberfest-production.key
docs/: API.rst  Makefile  _key_contributors.rst  conf.py  config.rst  contributing.rst  contributors.md  custom_mods.rst  formatting.rst  index.md  index.rst  installation.rst  internal_format.rst  jobs.rst  make.bat  modules.rst  news.rst  oktoberfest.data.rst  oktoberfest.rst  oktoberfest.utils.rst  outputs.rst  peptides_format.rst  predictions.rst  readme.rst  reference.rst  requirements.txt  svm_features.rst  usage.rst
keys/: id_rsa  id_rsa.pub  known_hosts
makefiles/: Linux.mk  Windows.mk
oktoberfest/: __init__.py  __main__.py  calculate_features.py  ce_calibration.py  constants.py  constants_dir.py  digest.py  library.py  multiprocessing_pool.py  oktoberfest.py  re_score.py  run_oktoberfest.py  runner.py  spectral_library.py
rescoring/: run_rescoring.py  run_rescoring2.py
tests/: __init__.py  test_main.py
tutorials/: EuBIC_2026_Winterschool_Oktoberfest_Workshop.ipynb  InPPO_Lite_2024_Oktoberfest_workshop.ipynb  Oktoberfest Tutorial Using Local Intensity Prediction.ipynb  Oktoberfest Tutorial.ipynb  Oktoberfest_workshop.ipynb  PrositMultiFrag_tutorial.ipynb  Prosit_MultiFrag_tutorial.ipynb  Prosit_XL_cleavable_tutorial.ipynb  Prosit_XL_non_cleavable_tutorial.ipynb  Prosit_XL_tutorial.ipynb  Prosit_cit_tutorial.ipynb  timsTOF_rescoring_tutorial.ipynb
ui/: README.md  package-lock.json  package.json  vue.config.js  zip_build.sh
webui/: .env.example  README.md  docker-compose.yml
webui/backend/: .gitignore  Dockerfile  alembic.ini  generate_plots.py  generate_stats.py  pyproject.toml
webui/backend/alembic/: env.py
webui/backend/alembic/versions/: 0001_initial_jobs_table.py
webui/backend/app/: config.py  db.py  main.py  models.py
webui/backend/app/api/: deps.py
webui/backend/app/api/v1/: files.py  health.py  jobs.py  meta.py
webui/backend/app/schemas/: ce_calibration.py  common.py  rescoring.py  speclib.py
webui/backend/app/services/: catalog.py  job_service.py  scheduler.py  storage.py
webui/backend/app/worker/: celery_app.py  cleanup.py  tasks.py
webui/backend/app/worker/backends/: base.py  local.py
webui/backend/tests/: test_api.py  test_e2e.py  test_scheduler.py  test_schemas.py  test_storage.py  test_worker.py
(+254 files in other folders)
