[tool.poetry]
name = "oktoberfest"
version = "0.10.0"
description = "Public repo oktoberfest"
authors = ["Wilhelmlab at Technical University of Munich"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/wilhelm-lab/oktoberfest"
repository = "https://github.com/wilhelm-lab/oktoberfest"
documentation = "https://oktoberfest.readthedocs.io"
packages = [
    { include = "oktoberfest" },
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
rich = ">=10.3.0"
PyYAML = ">=5.4.1"
anndata = "^0.10.5post1"
array-api-compat = "1.12.0"
matplotlib = "^3.6.3"
mokapot = ">=0.9.1"
numpy = ">=1.26.4"
seaborn = ">=0.12.2"
spectrum-io = ">=0.8.0"
picked_group_fdr = ">=0.9.0"
koinapy = ">=0.0.10"
spectrum-utils = "^0.4.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
coverage = {extras = ["toml"], version = ">=5.3"}
typeguard = ">=2.12.0"
xdoctest = {extras = ["colors"], version = ">=0.15.0"}
pre-commit = ">=3.0.0"
ruff = ">=0.15.0"
pre-commit-hooks = ">=4.4.0"
pyteomics = ">=4.7.3"
types-requests = ">=2.25.2"
types-attrs = ">=19.1.0"
Jinja2 = ">=3.0.1"
mypy = ">=0.910"
openpyxl = ">=3.0.10"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.0"
sphinx-autobuild = ">=2024.10.3"
sphinx-autodoc-typehints = ">=3.0"
sphinx-rtd-theme = ">=3.0.2"
Pygments = ">=2.8.1"

[tool.pytest.ini_options]
testpaths = ["tests/unit_tests"] # run only unit tests by default

[tool.poetry.scripts]
oktoberfest = "oktoberfest.__main__:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["B", "C", "D", "E", "F", "N", "S", "W"]
ignore = [
    "E203",  # whitespace before colon (conflicts with Black)
    "E501",  # line too long (handled by formatter)
    "D100",  # Missing module docstring
    "D212",  # Multi-line docstring summary should start at first line
    "S404",  # Consider possible security implications associated with subprocess module
    "S602",  # shell=True used in subprocess
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Use of assert detected
"**/__init__.py" = ["F401", "F403"]  # Unused import / wildcard imports
"docs/conf.py" = ["S404", "S607", "S603"]  # Security checks
"oktoberfest/runner.py" = ["C901", "S301", "S403"]  # Complexity and security

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# line-length inherited from [tool.ruff]

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true



[tool.coverage.paths]
source = ["oktoberfest", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["oktoberfest"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]
