[tool.poetry]
name = "oktoberfest-webui-backend"
version = "0.1.0"
description = "Web UI backend for Oktoberfest job orchestration"
authors = ["Wilhelm Lab"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = ">=0.111.0"
uvicorn = {extras = ["standard"], version = ">=0.29.0"}
sqlalchemy = ">=2.0.0"
alembic = ">=1.13.0"
celery = {extras = ["redis"], version = ">=5.3.0"}
redis = ">=5.0.0"
pydantic = ">=2.7.0"
pydantic-settings = ">=2.3.0"
aiofiles = ">=23.0.0"
python-multipart = ">=0.0.9"
oktoberfest = ">=0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
httpx = ">=0.27.0"
anyio = ">=4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
